Update list
