# src/modules/lists/lists.controller.ts
@@ -1,27 +1,34 @@
 import { List } from '@prisma/client';
-import { Body, Controller, Delete, Get, Patch, Path, Post, Route, Security, Tags, Request } from 'tsoa';
-import { ListRequest, createList, deleteList, getList, getLists, updateList } from './lists.service';
+import { Body, Controller, Delete, Get, Patch, Path, Post, Request, Route, Security, Tags } from 'tsoa';
+import { ListRequest, ListsService } from './lists.service';
 
-@Route('/lists')
 @Tags('Lists')
+@Route('/lists')
 export class ListsController extends Controller {
+  private listsService: ListsService;
+
+  constructor() {
+    super();
+    this.listsService = new ListsService();
+  }
+
   @Security('jwt', ['lists:read'])
   @Get()
   async getLists(): Promise<List[]> {
-    return getLists();
+    return this.listsService.getLists();
   }
 
   @Security('jwt', ['lists:read'])
   @Get('{id}')
   async getList(@Path() id: string): Promise<List> {
-    return getList(id);
+    return this.listsService.getList(id);
   }
 
   @Security('jwt', ['lists:write'])
   @Post()
   async createList(@Request() request: { user_id: string }, @Body() { title }: ListRequest): Promise<List> {
     const { user_id } = request;
-    return createList(user_id, { title });
+    return this.listsService.createList(user_id, { title });
   }
 
   @Security('jwt', ['lists:write'])
@@ -32,13 +39,13 @@ export class ListsController extends Controller {
     @Body() { title }: ListRequest
   ): Promise<List> {
     const { user_id } = request;
-    return updateList(user_id, id, { title });
+    return this.listsService.updateList(user_id, id, { title });
   }
 
   @Security('jwt', ['lists:write'])
   @Delete('{id}')
-  async deleteList(@Request() request: { user_id: string }, @Path() id: string): Promise<{ deleted: boolean }> {
+  async deleteList(@Request() request: { user_id: string }, @Path() id: string): Promise<void> {
     const { user_id } = request;
-    return deleteList(user_id, id);
+    return this.listsService.deleteList(user_id, id);
   }
 }
